# GrammArt

./: .editorconfig  .gitignore  CNAME  README.md  base64-to-array.js  code-editor.js  compiler.js  examples.js  index.html  init.sh  interpreter.js  main.js  make-for-client.sh  pack.sh  parser-utils.js  parser.js  style.css  to-base64.py  tree-sitter-grammartcfg-base64.js  utils.js
scripts/: make-for-client.sh  pack.sh  to-base64.py
tree-sitter-grammartcfg/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  compile-grammar.sh  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-grammartcfg/bindings/c/: tree-sitter-grammartcfg.h  tree-sitter-grammartcfg.pc.in
tree-sitter-grammartcfg/bindings/go/: binding.go  binding_test.go
tree-sitter-grammartcfg/bindings/node/: binding.cc  index.js
tree-sitter-grammartcfg/bindings/python/tests/: test_binding.py
tree-sitter-grammartcfg/bindings/python/tree_sitter_grammartcfg/: __init__.py  binding.c
tree-sitter-grammartcfg/bindings/rust/: build.rs  lib.rs
tree-sitter-grammartcfg/bindings/swift/TreeSitterGrammArtCFGTests/: TreeSitterGrammArtCFGTests.swift
tree-sitter-grammartcfg/test/corpus/: simple.txt
