[package]
name = "tree-sitter-grammartcfg"
description = "Subset of context free graphics language for GrammarArt project"
version = "0.1.0"
authors = ["Vojtěch Dvořák"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "grammartcfg"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/vojone/grammart"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
